demo-ns-isolated.yaml
kind: Namespace
apiVersion: v1
metadata:
   name: demos
   annotations:
      net.beta.kubernetes.io/network-policy: |
        {
           "ingress": {
              "isolation": "DefaultDeny"
           }
        }
