canal-pod-iptables
root@k01:~# kubectl exec -it canal-bprl5 -n kube-system -- /bin/sh
Defaulting container name to calico-node.
Use 'kubectl describe pod/canal-bprl5 -n kube-system' to see all of the containers in this pod.
/ # ip a
1: lo: <LOOPBACK,UP,LOWER_UP> mtu 65536 qdisc noqueue state UNKNOWN group default qlen 1
    link/loopback 00:00:00:00:00:00 brd 00:00:00:00:00:00
    inet 127.0.0.1/8 scope host lo
       valid_lft forever preferred_lft forever
    inet6 ::1/128 scope host
       valid_lft forever preferred_lft forever
2: ens33: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc pfifo_fast state UP group default qlen 1000
    link/ether 00:0c:29:89:83:80 brd ff:ff:ff:ff:ff:ff
    inet 10.1.0.203/24 brd 10.1.0.255 scope global ens33
       valid_lft forever preferred_lft forever
    inet6 fe80::20c:29ff:fe89:8380/64 scope link
       valid_lft forever preferred_lft forever
3: ens34: <BROADCAST,MULTICAST> mtu 1500 qdisc noop state DOWN group default qlen 1000
    link/ether 00:0c:29:89:83:8a brd ff:ff:ff:ff:ff:ff
4: docker0: <NO-CARRIER,BROADCAST,MULTICAST,UP> mtu 1500 qdisc noqueue state DOWN group default
    link/ether 02:42:54:10:ca:75 brd ff:ff:ff:ff:ff:ff
    inet 172.17.0.1/16 scope global docker0
       valid_lft forever preferred_lft forever
5: calie04d7d88f05@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 0
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
6: cali5db910297f5@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 1
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
7: cali18eed2ed619@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 2
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
8: calib682ca487ee@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 3
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
9: flannel.1: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1450 qdisc noqueue state UNKNOWN group default
    link/ether e6:34:44:73:86:af brd ff:ff:ff:ff:ff:ff
    inet 10.244.2.0/32 scope global flannel.1
       valid_lft forever preferred_lft forever
    inet6 fe80::e434:44ff:fe73:86af/64 scope link
       valid_lft forever preferred_lft forever
11: califa4b353a54d@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 4
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
12: calic581173646f@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 5
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
14: cali7d710577807@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 7
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
15: cali820de2bcfab@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 8
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
16: cali055ea51f7db@if3: <BROADCAST,MULTICAST,UP,LOWER_UP> mtu 1500 qdisc noqueue state UP group default
    link/ether ee:ee:ee:ee:ee:ee brd ff:ff:ff:ff:ff:ff link-netnsid 6
    inet6 fe80::ecee:eeff:feee:eeee/64 scope link
       valid_lft forever preferred_lft forever
/ # iptables-save
# Generated by iptables-save v1.6.1 on Tue Apr 10 02:44:57 2018
*mangle
:PREROUTING ACCEPT [10360:655114]
:INPUT ACCEPT [299848:383026876]
:FORWARD ACCEPT [1155:97020]
:OUTPUT ACCEPT [288070:31535366]
:POSTROUTING ACCEPT [289225:31632386]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-from-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A cali-PREROUTING -m comment --comment "cali:6BJqBjBC7crtA-7-" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:nE3PUa5RSRqBBvwx" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-PREROUTING -i cali+ -m comment --comment "cali:qgFofvzQe6yJPouQ" -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:o178eO5vvpj8e65z" -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:5TQcm-i_T8rVGEEa" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
COMMIT
# Completed on Tue Apr 10 02:44:57 2018
# Generated by iptables-save v1.6.1 on Tue Apr 10 02:44:57 2018
*raw
:PREROUTING ACCEPT [356049:394770798]
:OUTPUT ACCEPT [288073:31536029]
:cali-OUTPUT - [0:0]
:cali-PREROUTING - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-to-host-endpoint - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A cali-OUTPUT -m comment --comment "cali:WX1xZBEtmbS0Rhjs" -j MARK --set-xmark 0x0/0xf000000
-A cali-OUTPUT -m comment --comment "cali:iE00ZyllJNXfrlg_" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:Asois4hxp1rUxwJS" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-PREROUTING -m comment --comment "cali:zatSDPVUhhPCk6Iy" -j MARK --set-xmark 0x0/0xf000000
-A cali-PREROUTING -i cali+ -m comment --comment "cali:-ES4EW0vxFmM81t8" -j MARK --set-xmark 0x4000000/0x4000000
-A cali-PREROUTING -m comment --comment "cali:VE1J3S_1t9q8GAsm" -m mark --mark 0x0/0x4000000 -j cali-from-host-endpoint
-A cali-PREROUTING -m comment --comment "cali:VX8l4jKL9w89GXz5" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:73bZKoyDfOpFwC2T" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:QMFuWo6o-d9yOpNm" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Kup7QkrsdmfGX0uL" -m multiport --dports 4001 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:xYYr5PEqDf_Pqfkv" -m multiport --dports 7001 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:nbWBvu4OtudVY60Q" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:UxFu5cDK5En6dT3Y" -m multiport --dports 67 -j ACCEPT
COMMIT
# Completed on Tue Apr 10 02:44:57 2018
# Generated by iptables-save v1.6.1 on Tue Apr 10 02:44:57 2018
*nat
:PREROUTING ACCEPT [5:240]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [2:136]
:POSTROUTING ACCEPT [2:136]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-KMQPHRA2AGDCDMQO - [0:0]
:KUBE-SEP-OP4AXEAS4OXHBEQX - [0:0]
:KUBE-SEP-R7EMXN5TTQQVP4UW - [0:0]
:KUBE-SEP-RYL6TAAHM2SJLKYX - [0:0]
:KUBE-SEP-TI7DYTAQB2SF6CTF - [0:0]
:KUBE-SEP-ZBKTUVNXQ5CID7XH - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-GGH7UOJB47W7DRK6 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-ZFGCMCM5BEBXXXNG - [0:0]
:cali-OUTPUT - [0:0]
:cali-POSTROUTING - [0:0]
:cali-PREROUTING - [0:0]
:cali-fip-dnat - [0:0]
:cali-fip-snat - [0:0]
:cali-nat-outgoing - [0:0]
-A PREROUTING -m comment --comment "cali:6gwbT8clXdHdC1b1" -j cali-PREROUTING
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -m comment --comment "cali:O3lYWMrLQYEMJtB5" -j cali-POSTROUTING
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 10.244.0.0/16 -d 10.244.0.0/16 -j RETURN
-A POSTROUTING -s 10.244.0.0/16 ! -d 224.0.0.0/4 -j MASQUERADE
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.2.0/24 -j RETURN
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.0.0/16 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-KMQPHRA2AGDCDMQO -s 10.244.0.7/32 -m comment --comment "demos/frontend:" -j KUBE-MARK-MASQ
-A KUBE-SEP-KMQPHRA2AGDCDMQO -p tcp -m comment --comment "demos/frontend:" -m tcp -j DNAT --to-destination 10.244.0.7:80
-A KUBE-SEP-OP4AXEAS4OXHBEQX -s 10.244.0.10/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-OP4AXEAS4OXHBEQX -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.244.0.10:53
-A KUBE-SEP-R7EMXN5TTQQVP4UW -s 10.244.0.10/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-R7EMXN5TTQQVP4UW -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.244.0.10:53
-A KUBE-SEP-RYL6TAAHM2SJLKYX -s 10.244.0.8/32 -m comment --comment "demos/frontend:" -j KUBE-MARK-MASQ
-A KUBE-SEP-RYL6TAAHM2SJLKYX -p tcp -m comment --comment "demos/frontend:" -m tcp -j DNAT --to-destination 10.244.0.8:80
-A KUBE-SEP-TI7DYTAQB2SF6CTF -s 10.1.0.201/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-TI7DYTAQB2SF6CTF -p tcp -m comment --comment "default/kubernetes:https" -m recent --set --name KUBE-SEP-TI7DYTAQB2SF6CTF --mask 255.255.255.255 --rsource -m tcp -j DNAT --to-destination 10.1.0.201:6443
-A KUBE-SEP-ZBKTUVNXQ5CID7XH -s 10.244.0.9/32 -m comment --comment "demos/redis:" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZBKTUVNXQ5CID7XH -p tcp -m comment --comment "demos/redis:" -m tcp -j DNAT --to-destination 10.244.0.9:6379
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.98.189.127/32 -p tcp -m comment --comment "demos/redis: cluster IP" -m tcp --dport 6379 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.98.189.127/32 -p tcp -m comment --comment "demos/redis: cluster IP" -m tcp --dport 6379 -j KUBE-SVC-GGH7UOJB47W7DRK6
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.96.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.103.24.247/32 -p tcp -m comment --comment "demos/frontend: cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.103.24.247/32 -p tcp -m comment --comment "demos/frontend: cluster IP" -m tcp --dport 80 -j KUBE-SVC-ZFGCMCM5BEBXXXNG
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-SEP-OP4AXEAS4OXHBEQX
-A KUBE-SVC-GGH7UOJB47W7DRK6 -m comment --comment "demos/redis:" -j KUBE-SEP-ZBKTUVNXQ5CID7XH
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -m recent --rcheck --seconds 10800 --reap --name KUBE-SEP-TI7DYTAQB2SF6CTF --mask 255.255.255.255 --rsource -j KUBE-SEP-TI7DYTAQB2SF6CTF
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https" -j KUBE-SEP-TI7DYTAQB2SF6CTF
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns" -j KUBE-SEP-R7EMXN5TTQQVP4UW
-A KUBE-SVC-ZFGCMCM5BEBXXXNG -m comment --comment "demos/frontend:" -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-KMQPHRA2AGDCDMQO
-A KUBE-SVC-ZFGCMCM5BEBXXXNG -m comment --comment "demos/frontend:" -j KUBE-SEP-RYL6TAAHM2SJLKYX
-A cali-OUTPUT -m comment --comment "cali:GBTAv2p5CwevEyJm" -j cali-fip-dnat
-A cali-POSTROUTING -m comment --comment "cali:Z-c7XtVd2Bq7s_hA" -j cali-fip-snat
-A cali-POSTROUTING -m comment --comment "cali:nYKhEzDlr11Jccal" -j cali-nat-outgoing
-A cali-PREROUTING -m comment --comment "cali:r6XmIziWUJsdOK6Z" -j cali-fip-dnat
-A cali-nat-outgoing -m comment --comment "cali:Wd76s91357Uv7N3v" -m set --match-set cali4-masq-ipam-pools src -m set ! --match-set cali4-all-ipam-pools dst -j MASQUERADE
COMMIT
# Completed on Tue Apr 10 02:44:57 2018
# Generated by iptables-save v1.6.1 on Tue Apr 10 02:44:57 2018
*filter
:INPUT ACCEPT [227:50942]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [210:33947]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
:cali-FORWARD - [0:0]
:cali-INPUT - [0:0]
:cali-OUTPUT - [0:0]
:cali-failsafe-in - [0:0]
:cali-failsafe-out - [0:0]
:cali-from-host-endpoint - [0:0]
:cali-from-wl-dispatch - [0:0]
:cali-fw-cali055ea51f7db - [0:0]
:cali-fw-cali18eed2ed619 - [0:0]
:cali-fw-cali5db910297f5 - [0:0]
:cali-fw-cali7d710577807 - [0:0]
:cali-fw-cali820de2bcfab - [0:0]
:cali-fw-calib682ca487ee - [0:0]
:cali-fw-calic581173646f - [0:0]
:cali-fw-calie04d7d88f05 - [0:0]
:cali-fw-califa4b353a54d - [0:0]
:cali-pri-k8s_ns.default - [0:0]
:cali-pri-k8s_ns.mc1group - [0:0]
:cali-pri-k8s_ns.mc2group - [0:0]
:cali-pro-k8s_ns.default - [0:0]
:cali-pro-k8s_ns.mc1group - [0:0]
:cali-pro-k8s_ns.mc2group - [0:0]
:cali-to-host-endpoint - [0:0]
:cali-to-wl-dispatch - [0:0]
:cali-tw-cali055ea51f7db - [0:0]
:cali-tw-cali18eed2ed619 - [0:0]
:cali-tw-cali5db910297f5 - [0:0]
:cali-tw-cali7d710577807 - [0:0]
:cali-tw-cali820de2bcfab - [0:0]
:cali-tw-calib682ca487ee - [0:0]
:cali-tw-calic581173646f - [0:0]
:cali-tw-calie04d7d88f05 - [0:0]
:cali-tw-califa4b353a54d - [0:0]
:cali-wl-to-host - [0:0]
-A INPUT -m comment --comment "cali:Cz_u1IQiXIMmKD4c" -j cali-INPUT
-A INPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A INPUT -j KUBE-FIREWALL
-A FORWARD -m comment --comment "cali:wUHhoiAYhphO9Mso" -j cali-FORWARD
-A FORWARD -m comment --comment "kubernetes forward rules" -j KUBE-FORWARD
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -s 10.244.0.0/16 -j ACCEPT
-A FORWARD -d 10.244.0.0/16 -j ACCEPT
-A OUTPUT -m comment --comment "cali:tVnHkvAo15HuiPy0" -j cali-OUTPUT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER-ISOLATION -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-FORWARD -i cali+ -m comment --comment "cali:X3vB2lGcBrfkYquC" -j cali-from-wl-dispatch
-A cali-FORWARD -o cali+ -m comment --comment "cali:UtJ9FnhBnFbyQMvU" -j cali-to-wl-dispatch
-A cali-FORWARD -i cali+ -m comment --comment "cali:Tt19HcSdA5YIGSsw" -j ACCEPT
-A cali-FORWARD -o cali+ -m comment --comment "cali:9LzfFCvnpC5_MYXm" -j ACCEPT
-A cali-FORWARD -m comment --comment "cali:7AofLLOqCM5j36rM" -j MARK --set-xmark 0x0/0xe000000
-A cali-FORWARD -m comment --comment "cali:QM1_joSl7tL76Az7" -m mark --mark 0x0/0x1000000 -j cali-from-host-endpoint
-A cali-FORWARD -m comment --comment "cali:C1QSog3bk0AykjAO" -j cali-to-host-endpoint
-A cali-FORWARD -m comment --comment "cali:DmFiPAmzcisqZcvo" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-INPUT -m comment --comment "cali:i7okJZpS8VxaJB3n" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-INPUT -i cali+ -m comment --comment "cali:JaoDb6CLdcGw8g0Y" -g cali-wl-to-host
-A cali-INPUT -m comment --comment "cali:c5eKVW2VdKQ_LiSM" -j MARK --set-xmark 0x0/0xf000000
-A cali-INPUT -m comment --comment "cali:hwQKYSlSCkpE_9uN" -j cali-from-host-endpoint
-A cali-INPUT -m comment --comment "cali:ttp8-serzKCP-bKZ" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-OUTPUT -m comment --comment "cali:YQSSJIsRcHjFbXaI" -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-OUTPUT -o cali+ -m comment --comment "cali:KRjBsKsBcFBYKCEw" -j RETURN
-A cali-OUTPUT -m comment --comment "cali:3VKAQBcyUUW5kS_j" -j MARK --set-xmark 0x0/0xf000000
-A cali-OUTPUT -m comment --comment "cali:Z1mBCSH1XHM6qq0k" -j cali-to-host-endpoint
-A cali-OUTPUT -m comment --comment "cali:N0jyWt2RfBedKw3L" -m comment --comment "Host endpoint policy accepted packet." -m mark --mark 0x1000000/0x1000000 -j ACCEPT
-A cali-failsafe-in -p tcp -m comment --comment "cali:wWFQM43tJU7wwnFZ" -m multiport --dports 22 -j ACCEPT
-A cali-failsafe-in -p udp -m comment --comment "cali:LwNV--R8MjeUYacw" -m multiport --dports 68 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:73bZKoyDfOpFwC2T" -m multiport --dports 2379 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:QMFuWo6o-d9yOpNm" -m multiport --dports 2380 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:Kup7QkrsdmfGX0uL" -m multiport --dports 4001 -j ACCEPT
-A cali-failsafe-out -p tcp -m comment --comment "cali:xYYr5PEqDf_Pqfkv" -m multiport --dports 7001 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:nbWBvu4OtudVY60Q" -m multiport --dports 53 -j ACCEPT
-A cali-failsafe-out -p udp -m comment --comment "cali:UxFu5cDK5En6dT3Y" -m multiport --dports 67 -j ACCEPT
-A cali-from-wl-dispatch -i cali055ea51f7db -m comment --comment "cali:vL82YEHcDvrKcdG6" -g cali-fw-cali055ea51f7db
-A cali-from-wl-dispatch -i cali18eed2ed619 -m comment --comment "cali:iW5tVlEXq8CQj38H" -g cali-fw-cali18eed2ed619
-A cali-from-wl-dispatch -i cali5db910297f5 -m comment --comment "cali:SweKfaReakZRehln" -g cali-fw-cali5db910297f5
-A cali-from-wl-dispatch -i cali7d710577807 -m comment --comment "cali:O4I_XHN6Ki0esXXc" -g cali-fw-cali7d710577807
-A cali-from-wl-dispatch -i cali820de2bcfab -m comment --comment "cali:sHp0riBwbeTJr_5v" -g cali-fw-cali820de2bcfab
-A cali-from-wl-dispatch -i calib682ca487ee -m comment --comment "cali:qtfwJCTL1ftDckzn" -g cali-fw-calib682ca487ee
-A cali-from-wl-dispatch -i calic581173646f -m comment --comment "cali:Jof7Qx21UZdD-TyI" -g cali-fw-calic581173646f
-A cali-from-wl-dispatch -i calie04d7d88f05 -m comment --comment "cali:dije0cp_JnAxgE5H" -g cali-fw-calie04d7d88f05
-A cali-from-wl-dispatch -i califa4b353a54d -m comment --comment "cali:TwkVutE413RhWqCm" -g cali-fw-califa4b353a54d
-A cali-from-wl-dispatch -m comment --comment "cali:TJ8EhWBouR4cbTww" -m comment --comment "Unknown interface" -j DROP
-A cali-fw-cali055ea51f7db -m comment --comment "cali:P4AcA4bqgu4yXMIK" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali055ea51f7db -m comment --comment "cali:AHCk7hGg7FaD5hQ4" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali055ea51f7db -m comment --comment "cali:go8SgJYJ4vezNBAE" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali055ea51f7db -m comment --comment "cali:On27Hg4jGwLdfI2D" -j cali-pro-k8s_ns.mc1group
-A cali-fw-cali055ea51f7db -m comment --comment "cali:rwtwEwKUUdRrqeH9" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali055ea51f7db -m comment --comment "cali:7FLlzv2PFHgtfdpG" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali18eed2ed619 -m comment --comment "cali:W3UhhBI7Rkla4Zdp" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali18eed2ed619 -m comment --comment "cali:MyfWdH_rtwVyve9V" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali18eed2ed619 -m comment --comment "cali:ukclPxLpUKQ_8oJC" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali18eed2ed619 -m comment --comment "cali:53vFYZXVgowB2jI8" -j cali-pro-k8s_ns.default
-A cali-fw-cali18eed2ed619 -m comment --comment "cali:V2_0TqW73ZcJX4zy" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali18eed2ed619 -m comment --comment "cali:U8tgkjw1lS4PtrZW" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali5db910297f5 -m comment --comment "cali:qXHEyhKXRsFQil5u" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali5db910297f5 -m comment --comment "cali:XOKGrTP0KNtoP3N_" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali5db910297f5 -m comment --comment "cali:oqoWeor8dClV_gTH" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali5db910297f5 -m comment --comment "cali:_MC4SdHSdT1PZhJd" -j cali-pro-k8s_ns.default
-A cali-fw-cali5db910297f5 -m comment --comment "cali:wMQJzgm_uTwO-LV4" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali5db910297f5 -m comment --comment "cali:4627yBriWDWU4tP3" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali7d710577807 -m comment --comment "cali:SP-48qUTc2DNCTPR" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali7d710577807 -m comment --comment "cali:M_RQFbgVsyAULYHm" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali7d710577807 -m comment --comment "cali:JM3fouTDzly_BO6C" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali7d710577807 -m comment --comment "cali:medhH2PRGQMUWBLu" -j cali-pro-k8s_ns.mc1group
-A cali-fw-cali7d710577807 -m comment --comment "cali:ThcSe2SFy3Kn8VuN" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali7d710577807 -m comment --comment "cali:VXQskepQuJtgm6SP" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-cali820de2bcfab -m comment --comment "cali:Tv7bgl6haiDXCwDU" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-cali820de2bcfab -m comment --comment "cali:lbe-TgAa87kaBljf" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-cali820de2bcfab -m comment --comment "cali:wOuHnRsbSjwgF7Ig" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-cali820de2bcfab -m comment --comment "cali:5kEb3cJENVyRmkjm" -j cali-pro-k8s_ns.mc2group
-A cali-fw-cali820de2bcfab -m comment --comment "cali:lRxRZFacVfDbQtlP" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-cali820de2bcfab -m comment --comment "cali:vUlu7gfvAdGpDCsb" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calib682ca487ee -m comment --comment "cali:-6w_nq179QWzcCLR" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calib682ca487ee -m comment --comment "cali:kIXxiBbyUq79JTfZ" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calib682ca487ee -m comment --comment "cali:imfkF3m7SWwF8A-K" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-calib682ca487ee -m comment --comment "cali:f0gaiNETN62SBHHD" -j cali-pro-k8s_ns.default
-A cali-fw-calib682ca487ee -m comment --comment "cali:HYdpH6twrFrwftaD" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-calib682ca487ee -m comment --comment "cali:s1qPJYQ3hdQKJ-IV" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calic581173646f -m comment --comment "cali:Xurci0hmsW0mD4Zq" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calic581173646f -m comment --comment "cali:oC4t2OJUODilrYDF" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calic581173646f -m comment --comment "cali:776LD_lPqFCm0wbc" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-calic581173646f -m comment --comment "cali:bPd-Ky2bYpbbMRH1" -j cali-pro-k8s_ns.mc2group
-A cali-fw-calic581173646f -m comment --comment "cali:uwilgDZaU_DHjl1c" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-calic581173646f -m comment --comment "cali:laRPjrAbKejQkIHG" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-calie04d7d88f05 -m comment --comment "cali:pu0f0kiDH9y2jnfa" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-calie04d7d88f05 -m comment --comment "cali:795W_4zxfZC1EaSK" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-calie04d7d88f05 -m comment --comment "cali:ip4Kgpj8r9EJxWLm" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-calie04d7d88f05 -m comment --comment "cali:be_-75bgoPR39TJn" -j cali-pro-k8s_ns.default
-A cali-fw-calie04d7d88f05 -m comment --comment "cali:oi6JHkMUIzuH06QN" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-calie04d7d88f05 -m comment --comment "cali:1BNfKzlKZvtB4TQ4" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-fw-califa4b353a54d -m comment --comment "cali:Ggjz_ctzMSzoYMnk" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-fw-califa4b353a54d -m comment --comment "cali:Lvlpk0Jj64FVUwVU" -m conntrack --ctstate INVALID -j DROP
-A cali-fw-califa4b353a54d -m comment --comment "cali:l7_hIsz-sDxRUucA" -j MARK --set-xmark 0x0/0x1000000
-A cali-fw-califa4b353a54d -m comment --comment "cali:CzlH_BWmwxdBLR8i" -j cali-pro-k8s_ns.mc1group
-A cali-fw-califa4b353a54d -m comment --comment "cali:_Ipr8xNuktCQ6Bkt" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-fw-califa4b353a54d -m comment --comment "cali:EJxVdegWdWgyViXS" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-pri-k8s_ns.default -m comment --comment "cali:6MWuUqsVPzpSgE3L" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pri-k8s_ns.default -m comment --comment "cali:UGCdoOXoPRcONGv8" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pri-k8s_ns.mc1group -m comment --comment "cali:YLiqg6kR2M2oZhAF" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pri-k8s_ns.mc1group -m comment --comment "cali:vrArDzoYKZd-k2hp" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pri-k8s_ns.mc2group -m comment --comment "cali:VzV7OaJ8tyRNpWft" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pri-k8s_ns.mc2group -m comment --comment "cali:XNWgBRac7xTAatpQ" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pro-k8s_ns.default -m comment --comment "cali:DTsGE7pFaKbRuEBg" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pro-k8s_ns.default -m comment --comment "cali:4bIByWXruQ1DMcbo" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pro-k8s_ns.mc1group -m comment --comment "cali:mPoAeiCiO68U-Pyq" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pro-k8s_ns.mc1group -m comment --comment "cali:ZaZuDriJ7iIeISj8" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-pro-k8s_ns.mc2group -m comment --comment "cali:nwlzJxxiAx50dm_C" -j MARK --set-xmark 0x1000000/0x1000000
-A cali-pro-k8s_ns.mc2group -m comment --comment "cali:0axcYB5T9_yVUXMd" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-to-wl-dispatch -o cali055ea51f7db -m comment --comment "cali:qGWY0wLaRH2drblF" -g cali-tw-cali055ea51f7db
-A cali-to-wl-dispatch -o cali18eed2ed619 -m comment --comment "cali:Kmt6jJUi7B64leWX" -g cali-tw-cali18eed2ed619
-A cali-to-wl-dispatch -o cali5db910297f5 -m comment --comment "cali:0gudwT9hS4R06hB1" -g cali-tw-cali5db910297f5
-A cali-to-wl-dispatch -o cali7d710577807 -m comment --comment "cali:oNXZrXB-AALpljDD" -g cali-tw-cali7d710577807
-A cali-to-wl-dispatch -o cali820de2bcfab -m comment --comment "cali:LcZnLR-8yO_RFEgR" -g cali-tw-cali820de2bcfab
-A cali-to-wl-dispatch -o calib682ca487ee -m comment --comment "cali:Y7xAsDEa4XH6agt1" -g cali-tw-calib682ca487ee
-A cali-to-wl-dispatch -o calic581173646f -m comment --comment "cali:q1oUwggg0JAYG8ST" -g cali-tw-calic581173646f
-A cali-to-wl-dispatch -o calie04d7d88f05 -m comment --comment "cali:UI73I8U_tWhrllsl" -g cali-tw-calie04d7d88f05
-A cali-to-wl-dispatch -o califa4b353a54d -m comment --comment "cali:BSxuQ4ysTe1kFvJz" -g cali-tw-califa4b353a54d
-A cali-to-wl-dispatch -m comment --comment "cali:Zikvx27LFWvvop2d" -m comment --comment "Unknown interface" -j DROP
-A cali-tw-cali055ea51f7db -m comment --comment "cali:0cVEH-Vvfwtlf-av" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali055ea51f7db -m comment --comment "cali:FZTaCTJZRK0fS1uq" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali055ea51f7db -m comment --comment "cali:tyqBe2sPWF60DYU5" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali055ea51f7db -m comment --comment "cali:C8hMd8YNs6IwpML-" -j cali-pri-k8s_ns.mc1group
-A cali-tw-cali055ea51f7db -m comment --comment "cali:Yec7ChkPLF7Q2qpL" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali055ea51f7db -m comment --comment "cali:Mr9uo4YtcEobu3ZS" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali18eed2ed619 -m comment --comment "cali:xwO88Jmn8GEIoJDj" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali18eed2ed619 -m comment --comment "cali:uyJCC9whldvMCYxq" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali18eed2ed619 -m comment --comment "cali:8ZTrEKgO6YCYxeDA" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali18eed2ed619 -m comment --comment "cali:Qf_jZXDjXtyDFVJG" -j cali-pri-k8s_ns.default
-A cali-tw-cali18eed2ed619 -m comment --comment "cali:AvS5kReOMdKkH3rc" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali18eed2ed619 -m comment --comment "cali:xy29CoW3ajDSbBZM" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali5db910297f5 -m comment --comment "cali:fBQ5XxGW0GrvK7sX" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali5db910297f5 -m comment --comment "cali:YRrXtawREzOW3BIP" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali5db910297f5 -m comment --comment "cali:pr6lv8Ee7stfCvPu" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali5db910297f5 -m comment --comment "cali:bgW_IKVwcaPTUBZr" -j cali-pri-k8s_ns.default
-A cali-tw-cali5db910297f5 -m comment --comment "cali:JvjF-c_xTC__a45s" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali5db910297f5 -m comment --comment "cali:FC1mS4-Mc0VZtTz0" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali7d710577807 -m comment --comment "cali:rjLKuP_PL0lNZSD5" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali7d710577807 -m comment --comment "cali:lJacnaAOguhA9fkb" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali7d710577807 -m comment --comment "cali:hROoq_VBEFRmXbZe" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali7d710577807 -m comment --comment "cali:wrji62Q0EvFk9_MX" -j cali-pri-k8s_ns.mc1group
-A cali-tw-cali7d710577807 -m comment --comment "cali:Gg8ZH0dLAIpM8LL0" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali7d710577807 -m comment --comment "cali:5fAtvYXPlwgDcIlI" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-cali820de2bcfab -m comment --comment "cali:ZI1t1apt4xBFVLYS" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-cali820de2bcfab -m comment --comment "cali:Qjw4BA1nfjvN26ak" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-cali820de2bcfab -m comment --comment "cali:N3d88qTDqImivtoA" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-cali820de2bcfab -m comment --comment "cali:Gyhkf6aSPaMhdMj-" -j cali-pri-k8s_ns.mc2group
-A cali-tw-cali820de2bcfab -m comment --comment "cali:cRGes4C-boQRF_iV" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-cali820de2bcfab -m comment --comment "cali:9CkcdyI1mPKbmgGB" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calib682ca487ee -m comment --comment "cali:56dCknMopBaiXdcC" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calib682ca487ee -m comment --comment "cali:8yAwm_qwASocMgXE" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calib682ca487ee -m comment --comment "cali:1V--9GmfQDEv36eR" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-calib682ca487ee -m comment --comment "cali:yOQV_EH6BDT9jsED" -j cali-pri-k8s_ns.default
-A cali-tw-calib682ca487ee -m comment --comment "cali:v-rxa_QoFx3pAFnF" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-calib682ca487ee -m comment --comment "cali:wyk7vqyEkmuYwun7" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calic581173646f -m comment --comment "cali:nPQFwvvPmMkFIM87" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calic581173646f -m comment --comment "cali:TEUzfs-ONrqaw0Qt" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calic581173646f -m comment --comment "cali:RkVNCJSkJvfiO979" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-calic581173646f -m comment --comment "cali:pZZYnsqsM4SmAl-B" -j cali-pri-k8s_ns.mc2group
-A cali-tw-calic581173646f -m comment --comment "cali:X9jX2rIgRzuX-3Ig" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-calic581173646f -m comment --comment "cali:MKC57CUS9WDDkiGv" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-calie04d7d88f05 -m comment --comment "cali:HFji2b-KVRY48QU9" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-calie04d7d88f05 -m comment --comment "cali:1OyECiSveJYtWfrl" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-calie04d7d88f05 -m comment --comment "cali:WCyJKGmUsjM84xEP" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-calie04d7d88f05 -m comment --comment "cali:vAmbGmZ7tfxktEsS" -j cali-pri-k8s_ns.default
-A cali-tw-calie04d7d88f05 -m comment --comment "cali:XMqLHRC4UQZCdhFv" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-calie04d7d88f05 -m comment --comment "cali:VQBptZ3jDVUQsPZR" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-tw-califa4b353a54d -m comment --comment "cali:bLBuDfA-NO5mWOoP" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A cali-tw-califa4b353a54d -m comment --comment "cali:R9DhSlVIcqj1ytvu" -m conntrack --ctstate INVALID -j DROP
-A cali-tw-califa4b353a54d -m comment --comment "cali:Y0-w5HKUpro5VdBE" -j MARK --set-xmark 0x0/0x1000000
-A cali-tw-califa4b353a54d -m comment --comment "cali:upQPnDLjiph3hadN" -j cali-pri-k8s_ns.mc1group
-A cali-tw-califa4b353a54d -m comment --comment "cali:yQP3Y16NypZyp9jO" -m comment --comment "Return if profile accepted" -m mark --mark 0x1000000/0x1000000 -j RETURN
-A cali-tw-califa4b353a54d -m comment --comment "cali:6MyAzrB8m5WZh4NO" -m comment --comment "Drop if no profiles matched" -j DROP
-A cali-wl-to-host -m comment --comment "cali:Ee9Sbo10IpVujdIY" -j cali-from-wl-dispatch
-A cali-wl-to-host -m comment --comment "cali:nSZbcOoG1xPONxb8" -m comment --comment "Configured DefaultEndpointToHostAction" -j ACCEPT
COMMIT
# Completed on Tue Apr 10 02:44:57 2018
/ #
